ENOVBM : add FeatureIdeUtils class

--- a/ter-spl-m1/bin/.gitignore
+++ b/ter-spl-m1/bin/.gitignore
@@ -1,7 +1,10 @@
-/Main$3.class
-/Asset$2.class
+/Asset$1.class
+/Asset.class
+/FeautureIdeUtils.class
 /Main$1.class
 /Main$2.class
-/Asset$1.class
-/spooned/
+/Main$3.class
+/Main.class
 /Noeud.class
+/Variation.class
+/FeatureIdeUtils.class
