--- a/CLEF/.classpath
+++ b/CLEF/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="CLEF/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_191"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
