--- a/ter-spl-m1/.classpath
+++ b/ter-spl-m1/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_191"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_191"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="spoon-core-8.0.0-jar-with-dependencies.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/CLEF"/>
